Fixed wrong z-index of header-video component

--- a/src/app/features/landing/components/header-video/header-video.component.scss
+++ b/src/app/features/landing/components/header-video/header-video.component.scss
@@ -4,6 +4,7 @@
 :host {
   display: block;
   position: relative;
+  z-index: -1;
   height: 90vh;
 }
 .back-video {
